refactors styles to fix issues with a tags and recipe row spacing

--- a/src/index.css
+++ b/src/index.css
@@ -69,7 +69,7 @@ button:hover {
   background-color: #2f4550;
 }
 
-a {
+.menu-bar-wrapper a {
   text-decoration: none;
   padding: 10px;
   color: #586f7c;
@@ -77,7 +77,7 @@ a {
   text-align: center;
 }
 
-a:hover {
+.menu-bar-wrapper a:hover {
   cursor: pointer;
   color: #2f4550;
   background-color: #f4f4f9;
@@ -263,6 +263,10 @@ textarea {
 
 .recipe-row h3 {
   color: #586f7c;
+}
+
+.recipe-row a {
+  text-decoration: none;
 }
 
 .recipe-row:hover {
